<resources>
    <!-- Activity -->
    <string name="app_name">Wedding Planning</string>
    <string name="activity_main">Dashboard</string>
    <string name="activity_login">Login</string>
    <string name="activity_signup">Registro</string>
    <string name="activity_profile">Perfil</string>
    <string name="activity_events">Eventos de %1$s</string>
    <string name="activity_event_info">Evento</string>
    <string name="activity_event_info_new">Nuevo evento</string>
    <string name="activity_services">Servicios</string>
    <string name="activity_provider_info">Proveedor</string>
    <string name="activity_chat">Conversaciones</string>
    <string name="activity_message">Mensajes</string>
    <string name="activity_todo">Tareas</string>

    <!-- Forms -->
    <string name="dni">DNI</string>
    <string name="cif">CIF</string>
    <string name="name">Nombre</string>
    <string name="lastName">Apellidos</string>
    <string name="address">Direccion</string>
    <string name="town">Población</string>
    <string name="province">Provincia</string>
    <string name="postalCode">C.P.</string>
    <string name="phone">Teléfono</string>
    <string name="mobile">Móvil</string>
    <string name="email">Email</string>
    <string name="birthDate">F. Nacimiento</string>
    <string name="pws">Contraseña</string>
    <string name="rePws">Repetir contraseña</string>
    <string name="event">Evento</string>
    <string name="description">Descripción</string>
    <string name="date">Fecha</string>
    <string name="active">Activo</string>
    <string name="providers">Proveedores</string>
    <string name="clients">Clientes</string>
    <string name="services">Servicios</string>
    <string name="message">Escribe&#8230;</string>
    <string name="dni_required">DNI*</string>
    <string name="email_required">Email*</string>
    <string name="pws_required">Contraseña*</string>
    <string name="rePws_required">Repetir contraseña*</string>

    <!-- Forms Validation -->
    <string name="validation_dni">Introducir un DNI válido</string>
    <string name="validation_email">Introducir un email válido</string>
    <string name="validation_password">Mínimo 6 caracteres alfanuméricos</string>
    <string name="validation_password_match">Las contraseñas no coinciden</string>
    <string name="validation_event">Introducir un nombre</string>
    <string name="validation_description">Introducir una descripción</string>
    <string name="validation_date">Introducir una fecha posterior a hoy</string>

    <!-- Buttons -->
    <string name="btnLogin">Iniciar sesión</string>
    <string name="btnSignup">Registrar</string>
    <string name="btnShowPassword">Cambiar contraseña</string>
    <string name="btnHidePassword">No cambiar contraseñas</string>
    <string name="btnSave">Guardar</string>
    <string name="btnSearch">Buscar</string>
    <string name="btnLink2Event">Vincular a evento</string>
    <string name="btnCreateAccount">¿Aún no tienes cuenta? Crea una nueva</string>
    <string name="btnGoLogin">¿Ya tienes cuenta? inicia sesión</string>
    <string name="btnSend">Enviar</string>

    <!-- Main -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Wedding Planning</string>
    <string name="text_welcome">Bienvenid@ a Wedding Planning</string>
    <string name="text_description">Agradecemos que deposites tu confianza en nosotros para la organización de eventos.</string>

    <!-- Events -->
    <string name="list_next_events">Próximos eventos</string>
    <string name="list_prev_events">Anteriores eventos</string>
    <string name="list_no_events">Sin eventos</string>

    <!-- Event info -->
    <string name="list_clients_event">Clientes</string>
    <string name="list_providers_event">Proveedores</string>

    <!-- Menu -->
    <string name="menu_profile">Perfil</string>
    <string name="menu_event">Eventos</string>
    <string name="menu_services">Servicios</string>
    <string name="menu_message">Mensajes</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_add">Añadir</string>
    <string name="menu_todo">Tareas</string>

    <!-- ProgressDialog -->
    <string name="progressDialog_login">Iniciando sesión&#8230;</string>
    <string name="progressDialog_signup">Creando cuenta&#8230;</string>
    <string name="progressDialog_updating_profile">Actualizando perfil&#8230;</string>
    <string name="progressDialog_updating_event">Actualizando evento&#8230;</string>
    <string name="progressDialog_creating_event">Creando evento&#8230;</string>
    <string name="progressDialog_loading_events">Cargando eventos&#8230;</string>
    <string name="progressDialog_loading_services">Cargando servicios&#8230;</string>
    <string name="progressDialog_loading_providers">Cargando proveedores&#8230;</string>
    <string name="progressDialog_loading_chats">Cargando conversaciones&#8230;</string>

    <!-- Toast -->
    <string name="toast_client_login_failed">Falló el inicio de sesión</string>
    <string name="toast_client_signup_failed">"Falló al registrar cliente"</string>
    <string name="toast_client_update_successful">Los datos se han actualizado correcamente</string>
    <string name="toast_client_update_failed">No ha sido posible actualizar los datos</string>
    <string name="toast_provider_find_failed">No ha sido posible encontrar ese proveedor</string>
    <string name="toast_event_find_failed">No ha sido posible encontrar ese evento</string>
    <string name="toast_event_update_successful">Los datos se han actualizado correcamente</string>
    <string name="toast_event_update_failed">No ha sido posible actualizar los datos</string>
    <string name="toast_event_create_successful">El evento se ha creado correctamente</string>
    <string name="toast_event_create_failed">No ha sido posible crear el evento</string>

    <!-- Dialog -->
    <string name="dialog_choose_event">Selecciona un evento</string>
    <string name="dialog_confirm_choose_event">¿Seguro que deseas vincular este proveedor a este evento?</string>
    <string name="dialog_confirm_remove_provider">¿Seguro que deseas eliminar este proveedor?</string>
    <string name="dialog_confirm_yes">Sí</string>
    <string name="dialog_confirm_no">No</string>

    <!-- Message -->
    <string name="message_linked">%1$s ha añadido a %2$s</string>
</resources>
